--- a/src/app/project-layout/sidebar/sidebar.component.html
+++ b/src/app/project-layout/sidebar/sidebar.component.html
@@ -2,36 +2,36 @@
 
   <a clrVerticalNavLink routerLink="./dashboard" routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="dashboard"></clr-icon>
-    Dashboard
+    {{ 'SIDEBAR.DASHBOARD' | translate }}
   </a>
 
   <div class="nav-divider"></div>
   <a clrVerticalNavLink routerLink="./requirements" routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="file-group"></clr-icon>
-    Requirements
+    {{ 'SIDEBAR.REQUIREMENTS' | translate }}
   </a>
 
   <a clrVerticalNavLink routerLink="./test-management" routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="list"></clr-icon>
-    Test Management
+    {{ 'SIDEBAR.TEST_MANAGEMENT' | translate }}
   </a>
 
   <div class="nav-divider"></div>
   <a clrVerticalNavLink routerLink="./test-executions" routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="tasks"></clr-icon>
-    Test Executions
+    {{ 'SIDEBAR.TEST_EXECUTIONS' | translate }}
   </a>
 
 
 
   <a clrVerticalNavLink routerLink="./reports" routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="bar-chart"></clr-icon>
-    Reports
+    {{ 'SIDEBAR.REPORTS' | translate }}
   </a>
 
   <a clrVerticalNavLink routerLink="./settings" routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="cog"></clr-icon>
-    Settings
+    {{ 'SIDEBAR.PROJECT_SETTINGS' | translate }}
   </a>
 
 </div>
