--- a/src/app/test-management/test-management.component.html
+++ b/src/app/test-management/test-management.component.html
@@ -34,7 +34,7 @@
     -->
     <button class="btn btn-primary">
       <clr-icon shape="plus"></clr-icon>
-      Add
+      {{ 'TESTMANAGEMENTPAGE.ADD' | translate }}
     </button>
 
     <h4>Geo zones</h4>
@@ -46,7 +46,7 @@
         </clr-dg-action-bar>
       -->
       <!-- [(clrDgSelected)]="users" -->
-      <clr-dg-column>Title
+      <clr-dg-column>{{ 'TESTMANAGEMENTPAGE.TITLE' | translate }}
       </clr-dg-column>
       <!--
         <clr-dg-column>
@@ -99,7 +99,7 @@
         </clr-dg-action-bar>
       -->
       <!-- [(clrDgSelected)]="users" -->
-      <clr-dg-column>Title
+      <clr-dg-column>{{ 'TESTMANAGEMENTPAGE.TITLE' | translate }}
       </clr-dg-column>
       <!--
       <clr-dg-column>
