--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,6 +1,6 @@
 <div class="content-container">
 
-  <clr-vertical-nav [clr-nav-level]="1" class="sidenav nav-trigger--bottom" [clrVerticalNavCollapsible]="true" [(clrVerticalNavCollapsed)]="collapsed">
+  <clr-vertical-nav class="sidenav nav-trigger--bottom" [clrVerticalNavCollapsible]="true" [(clrVerticalNavCollapsed)]="collapsed">
     <div class="nav-content">
 
       <a clrVerticalNavLink routerLink="./main" routerLinkActive="active">
@@ -9,8 +9,13 @@
       </a>
 
       <a clrVerticalNavLink routerLink="./users" routerLinkActive="active">
-        <clr-icon clrVerticalNavIcon shape="user"></clr-icon>
+        <clr-icon clrVerticalNavIcon shape="users"></clr-icon>
         Users
+      </a>
+
+      <a clrVerticalNavLink routerLink="./inventory" routerLinkActive="active">
+        <clr-icon clrVerticalNavIcon shape="devices"></clr-icon>
+        Inventory
       </a>
 
     </div>
