--- a/src/app/settings/main-settings/main-settings.component.html
+++ b/src/app/settings/main-settings/main-settings.component.html
@@ -1,17 +1,28 @@
 <div>
-  <h1>
-    Settings
-  </h1>
 
+  <form>
+    <section class="form-block">
 
-  <app-users></app-users>
-  <app-roles></app-roles>
+      <div class="form-group">
+        <label for="theme">Dark Theme</label>
+        <div class="toggle-switch">
+          <input type="checkbox" id="theme">
+          <label for="theme"></label>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="language">Language</label>
+        <div class="select">
+          <select id="language">
+            <option>Russian</option>
+            <option>English</option>
+            <option>Spanish</option>
+            <option>German</option>
+            <option>Portugal</option>
+          </select>
+        </div>
+      </div>
 
-  <p>Work In Progress</p>
-  <ul>
-    <li>User Management</li>
-    <li>Roles / Access Rights Management</li>
-    <li>Themes</li>
-    <li>Languages</li>
-  </ul>
+    </section>
+  </form>
 </div>
