feat(ui): add os version and animation to inventory

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -8,9 +8,10 @@
   </div>
   <div class="header-actions">
 
-    <a href="javascript://" class="nav-link nav-icon">
+    <!--
+    <a class="nav-link nav-icon">
       <clr-icon shape="bell" class="has-badge is-solid"></clr-icon>
-    </a>
+    </a>-->
     <clr-dropdown>
       <button class="nav-text" clrDropdownTrigger>
         john.doe@example.com
