--- a/src/app/settings/inventory/inventory.component.html
+++ b/src/app/settings/inventory/inventory.component.html
@@ -9,6 +9,7 @@
         <th style="width: 50px;">Type</th>
         <th class="left">Name</th>
         <th style="width: 200px;">OS</th>
+        <th style="width: 200px;">OS Version</th>
         <th style="width: 200px;">User</th>
       </tr>
     </thead>
@@ -24,6 +25,7 @@
         </td>
         <td class="left">{{ device.manufacturer }} {{ device.model }}</td>
         <td>{{ device.os }}</td>
+        <td>{{ device.osVersion }}</td>
         <td>
           <div class="form-group">
             <label for="selects_1"></label>
