--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -15,7 +15,7 @@
 
       <div *ngFor="let project of projects" class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
 
-        <a routerLink="./1" class="card clickable">
+        <a routerLink="./{{project._id}}" class="card clickable">
           <div class="card-img">
             <img src="assets/placeholder_350x150.png" alt="..." />
           </div>
