--- a/src/app/test-management/test-management.component.html
+++ b/src/app/test-management/test-management.component.html
@@ -1,18 +1,24 @@
 <div class="row">
   <div class="col-sm-12 col-md-12 col-lg-9">
 
-    <button class="btn btn-primary">
-      <clr-icon shape="plus"></clr-icon>
-      {{ 'TESTMANAGEMENTPAGE.ADD' | translate }}
-    </button>
+    <h4>{{ selectedTestSuite }}</h4>
+    <clr-datagrid *ngIf="testCases" [(clrDgSelected)]="selectedTestCases" [clDgRowSelection]="true">
 
-    <h4>Geo zones</h4>
-    <clr-datagrid>
+        <clr-dg-action-bar >
+            <div class="btn-group">
+              <button type="button" class="btn btn-sm btn-secondary" (click)="onAdd()">
+                <clr-icon shape="plus"></clr-icon> {{ 'TESTMANAGEMENTPAGE.ADD' | translate }}</button>
+              <button type="button" class="btn btn-sm btn-secondary" (click)="onDelete()">
+                <clr-icon shape="close"></clr-icon> {{ 'TESTMANAGEMENTPAGE.DELETE' | translate }}</button>
+              <button type="button" class="btn btn-sm btn-secondary" (click)="onEdit()" *ngIf="selectedTestCases.length == 1">
+                <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}</button>
+            </div>
+          </clr-dg-action-bar>
 
       <clr-dg-column>{{ 'TESTMANAGEMENTPAGE.TITLE' | translate }}</clr-dg-column>
       <!--<clr-dg-column>Status</clr-dg-column>-->
 
-      <clr-dg-row *ngFor="let testCase of testCases">
+      <clr-dg-row *clrDgItems="let testCase of testCases" [clrDgItem]="testCase">
         <!--
         <clr-dg-cell style="display: flex;">
             <clr-checkbox></clr-checkbox>
@@ -58,12 +64,12 @@
       {{ testSuitesViewModel | json }}
     </pre>-->
     <clr-tree-node *ngFor="let testSuite of testSuitesViewModel">
-      <button (click)="openTestSuite(testSuite._id)" class="clr-treenode-link"><clr-icon [attr.shape]="testSuite.icon"></clr-icon>
+      <button (click)="openTestSuite(testSuite._id, testSuite.name)" class="clr-treenode-link"><clr-icon [attr.shape]="testSuite.icon"></clr-icon>
       {{testSuite.name}}
       </button>
       <ng-template [(clrIfExpanded)]="testSuite.expanded">
         <clr-tree-node *ngFor="let subTestSuite of testSuite.children">
-          <button (click)="openTestSuite(subTestSuite._id)" class="clr-treenode-link" [class.active]="subTestSuite.active">
+          <button (click)="openTestSuite(subTestSuite._id, subTestSuite.name)" class="clr-treenode-link" [class.active]="subTestSuite._id === selectedTestSuite">
             <clr-icon [attr.shape]="subTestSuite.icon"></clr-icon>
             {{subTestSuite.name}}
           </button>
