fix(wizard): fix property name

--- a/src/app/system-wizard/system-wizard.component.html
+++ b/src/app/system-wizard/system-wizard.component.html
@@ -1,6 +1,6 @@
 <!--<button class="btn btn-primary" (click)="projectWizard = !projectWizard;">Open</button>-->
 
-<clr-wizard #wizardxl [(clrWizardOpen)]="systemWizard">
+<clr-wizard #wizardxl [(clrWizardOpen)]="opened">
   <clr-wizard-title>System Wizard</clr-wizard-title>
 
   <clr-wizard-button [type]="'cancel'">Cancel</clr-wizard-button>
