feat(notifications): add toast notifications

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,4 +1,5 @@
 <clr-main-container>
+  <simple-notifications [options]="toastNotificationsOptions"></simple-notifications>
   <!--<app-notification></app-notification>-->
   <app-header></app-header>
   <div class="content-container">
