feat(testcases): add modal for delete and toast notification

--- a/src/app/test-management/test-management.component.html
+++ b/src/app/test-management/test-management.component.html
@@ -1,35 +1,37 @@
-<div class="row">
-  <div class="col-sm-12 col-md-12 col-lg-9">
+<div class="content-area">
+  <div class="row">
 
-    <h4>{{ selectedTestSuite }}</h4>
-    <clr-datagrid *ngIf="testCases" [(clrDgSelected)]="selectedTestCases" [clDgRowSelection]="true">
+    <div class="col-sm-12 col-md-12 col-lg-9">
 
-        <clr-dg-action-bar >
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-secondary" (click)="onAdd()" *ngIf="selectedTestSuite != ''">
-                <clr-icon shape="plus"></clr-icon> {{ 'TESTMANAGEMENTPAGE.ADD' | translate }}</button>
-              <button type="button" class="btn btn-sm btn-secondary" (click)="onDelete()" *ngIf="selectedTestCases.length > 0">
-                <clr-icon shape="close"></clr-icon> {{ 'TESTMANAGEMENTPAGE.DELETE' | translate }}</button>
-              <button type="button" class="btn btn-sm btn-secondary" (click)="onEdit()" *ngIf="selectedTestCases.length == 1">
-                <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}</button>
-            </div>
-          </clr-dg-action-bar>
+      <h4>{{ selectedTestSuite }}</h4>
+      <clr-datagrid *ngIf="testCases" [(clrDgSelected)]="selectedTestCases" [clDgRowSelection]="true">
 
-      <clr-dg-column>{{ 'TESTMANAGEMENTPAGE.TITLE' | translate }}</clr-dg-column>
-      <!--<clr-dg-column>Status</clr-dg-column>-->
+        <clr-dg-action-bar>
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-secondary" (click)="onAdd()" *ngIf="selectedTestSuite != ''">
+              <clr-icon shape="plus"></clr-icon> {{ 'TESTMANAGEMENTPAGE.ADD' | translate }}</button>
+            <button type="button" class="btn btn-sm btn-secondary" (click)="onDelete()" *ngIf="selectedTestCases.length > 0">
+              <clr-icon shape="close"></clr-icon> {{ 'TESTMANAGEMENTPAGE.DELETE' | translate }}</button>
+            <button type="button" class="btn btn-sm btn-secondary" (click)="onEdit()" *ngIf="selectedTestCases.length == 1">
+              <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}</button>
+          </div>
+        </clr-dg-action-bar>
 
-      <clr-dg-row *clrDgItems="let testCase of testCases" [clrDgItem]="testCase">
-        <!--
+        <clr-dg-column>{{ 'TESTMANAGEMENTPAGE.TITLE' | translate }}</clr-dg-column>
+        <!--<clr-dg-column>Status</clr-dg-column>-->
+
+        <clr-dg-row *clrDgItems="let testCase of testCases" [clrDgItem]="testCase">
+          <!--
         <clr-dg-cell style="display: flex;">
             <clr-checkbox></clr-checkbox>
           <span style="align-self: center;">{{user.name}}</span>
         </clr-dg-cell>
       -->
-        <clr-dg-cell>
-          {{testCase.title}}
-        </clr-dg-cell>
+          <clr-dg-cell>
+            {{testCase.title}}
+          </clr-dg-cell>
 
-<!--
+          <!--
           <clr-dg-cell>
             <div class="select">
               <select id="selects_1">
@@ -42,38 +44,49 @@
             </div>
           </clr-dg-cell>
 -->
-      </clr-dg-row>
+        </clr-dg-row>
 
-      <clr-dg-footer>{{testCases.length}}</clr-dg-footer>
-    </clr-datagrid>
-
-
-
-  </div>
+        <clr-dg-footer>{{testCases.length}}</clr-dg-footer>
+      </clr-datagrid>
 
 
-  <!-- TEST SUITES TREE COMPONENT -->
 
-  <div *ngIf="testSuitesViewModel.length > 0" class="col-sm-12 col-md-12 col-lg-3">
-    <!-- TODO move to testsuites tree component -->
-    <!--<pre>
+    </div>
+
+
+    <!-- TEST SUITES TREE COMPONENT -->
+
+    <div *ngIf="testSuitesViewModel.length > 0" class="col-sm-12 col-md-12 col-lg-3">
+      <!-- TODO move to testsuites tree component -->
+      <!--<pre>
       {{ testSuitesViewModel | json }}
     </pre>-->
-    <clr-tree-node *ngFor="let testSuite of testSuitesViewModel">
-      <!--<button (click)="openTestSuite(testSuite._id, testSuite.name)" class="clr-treenode-link">-->
-      <clr-icon [attr.shape]="testSuite.icon"></clr-icon>
-      {{testSuite.name}}
-      <!--</button>-->
-      <ng-template [(clrIfExpanded)]="testSuite.expanded">
-        <clr-tree-node *ngFor="let subTestSuite of testSuite.children">
-          <button (click)="openTestSuite(subTestSuite._id, subTestSuite.name)" class="clr-treenode-link" [class.active]="subTestSuite._id === selectedTestSuite">
-            <clr-icon [attr.shape]="subTestSuite.icon"></clr-icon>
-            {{subTestSuite.name}}
-          </button>
-        </clr-tree-node>
-      </ng-template>
-    </clr-tree-node>
+      <clr-tree-node *ngFor="let testSuite of testSuitesViewModel">
+        <!--<button (click)="openTestSuite(testSuite._id, testSuite.name)" class="clr-treenode-link">-->
+        <clr-icon [attr.shape]="testSuite.icon"></clr-icon>
+        {{testSuite.name}}
+        <!--</button>-->
+        <ng-template [(clrIfExpanded)]="testSuite.expanded">
+          <clr-tree-node *ngFor="let subTestSuite of testSuite.children">
+            <button (click)="openTestSuite(subTestSuite._id, subTestSuite.name)" class="clr-treenode-link" [class.active]="subTestSuite._id === selectedTestSuite">
+              <clr-icon [attr.shape]="subTestSuite.icon"></clr-icon>
+              {{subTestSuite.name}}
+            </button>
+          </clr-tree-node>
+        </ng-template>
+      </clr-tree-node>
 
 
+    </div>
   </div>
+  <clr-modal [(clrModalOpen)]="popUpOpened">
+    <h3 class="modal-title">Delete Test Case</h3>
+    <div class="modal-body">
+      <p>Are you sure you want to delete selected test cases? This action is permanent and cannot be recovered.</p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline" (click)="popUpOpened = false">Cancel</button>
+      <button type="button" class="btn btn-primary btn-danger" (click)="popUpOpened = false; forceDelete();">Ok</button>
+    </div>
+  </clr-modal>
 </div>
