--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -5,17 +5,17 @@
 
       <a clrVerticalNavLink routerLink="./main" routerLinkActive="active">
         <clr-icon clrVerticalNavIcon shape="cog"></clr-icon>
-        Main Settings
+        {{ 'SETTINGS.MAIN_SETTINGS' | translate }}
       </a>
 
       <a clrVerticalNavLink routerLink="./users" routerLinkActive="active">
         <clr-icon clrVerticalNavIcon shape="users"></clr-icon>
-        Users
+        {{ 'SETTINGS.USERS' | translate }}
       </a>
 
       <a clrVerticalNavLink routerLink="./inventory" routerLinkActive="active">
         <clr-icon clrVerticalNavIcon shape="devices"></clr-icon>
-        Inventory
+        {{ 'SETTINGS.INVENTORY' | translate }}
       </a>
 
     </div>
