--- a/src/app/settings/main-settings/main-settings.component.html
+++ b/src/app/settings/main-settings/main-settings.component.html
@@ -4,21 +4,24 @@
     <section class="form-block">
 
       <div class="form-group">
-        <label for="theme">Dark Theme</label>
+        <label for="theme">{{ 'MAINSETTINGS.THEME' | translate }}</label>
         <div class="toggle-switch">
           <input type="checkbox" id="theme">
-          <label for="theme"></label>
+          <label for="theme">{{ 'MAINSETTINGS.THEME_BRIGHT' | translate }}</label>
+          <label for="theme">{{ 'MAINSETTINGS.THEME_DARK' | translate }}</label>
         </div>
       </div>
       <div class="form-group">
-        <label for="language">Language</label>
+        <label for="language">{{ 'MAINSETTINGS.LANGUAGE' | translate }}</label>
         <div class="select">
           <select id="language">
-            <option>Russian</option>
-            <option>English</option>
+            <option>{{ 'MAINSETTINGS.RUSSIAN' | translate }}</option>
+            <option>{{ 'MAINSETTINGS.ENGLISH' | translate }}</option>
+            <!--
             <option>Spanish</option>
             <option>German</option>
             <option>Portugal</option>
+            -->
           </select>
         </div>
       </div>
