--- a/src/app/settings/users/users.component.html
+++ b/src/app/settings/users/users.component.html
@@ -2,27 +2,25 @@
   <clr-dg-action-bar>
     <div class="btn-group">
       <button type="button" class="btn btn-sm btn-secondary" (click)="onAdd()">
-        <clr-icon shape="plus"></clr-icon> Add User</button>
+        <clr-icon shape="plus"></clr-icon> {{ 'USERSSETTINGS.ADD' | translate }}</button>
       <button type="button" class="btn btn-sm btn-secondary" (click)="onDelete()">
-        <clr-icon shape="close"></clr-icon> Delete</button>
+        <clr-icon shape="close"></clr-icon> {{ 'USERSSETTINGS.DELETE' | translate }}</button>
       <button type="button" class="btn btn-sm btn-secondary" (click)="onEdit()" *ngIf="selected.length == 1">
-        <clr-icon shape="pencil"></clr-icon> Edit</button>
+        <clr-icon shape="pencil"></clr-icon> {{ 'USERSSETTINGS.EDIT' | translate }}</button>
     </div>
   </clr-dg-action-bar>
 
-  <clr-dg-column>Name</clr-dg-column>
+  <clr-dg-column>{{ 'USERSSETTINGS.NAME' | translate }}</clr-dg-column>
   <clr-dg-column>Email</clr-dg-column>
-  <clr-dg-column>Creation date</clr-dg-column>
-  <clr-dg-column>User groups</clr-dg-column>
+  <!--<clr-dg-column>Creation date</clr-dg-column>-->
 
   <clr-dg-row *clrDgItems="let user of users" [clrDgItem]="user">
     <clr-dg-cell>{{user.lastName}} {{user.firstName}}</clr-dg-cell>
     <clr-dg-cell>{{user.email}}</clr-dg-cell>
-    <clr-dg-cell>{{user.created * 1000 | date}}</clr-dg-cell>
-    <clr-dg-cell></clr-dg-cell>
+    <!--<clr-dg-cell>{{user.created * 1000 | date}}</clr-dg-cell>-->
   </clr-dg-row>
 
-  <clr-dg-footer>{{users.length}} users</clr-dg-footer>
+  <clr-dg-footer>{{users.length}} {{ 'USERSSETTINGS.USERS' | translate }}</clr-dg-footer>
 </clr-datagrid>
 
 <!--<app-users></app-users>-->
