feat(themes): disable theme switching

--- a/src/app/settings/main-settings/main-settings.component.html
+++ b/src/app/settings/main-settings/main-settings.component.html
@@ -5,7 +5,7 @@
 
       <div class="form-group">
         <label for="theme">{{ 'MAINSETTINGS.THEME' | translate }}</label>
-        <div class="toggle-switch">
+        <div class="toggle-switch disabled">
           <input type="checkbox" id="theme">
           <label for="theme">{{ 'MAINSETTINGS.THEME_BRIGHT' | translate }}</label>
           <label for="theme">{{ 'MAINSETTINGS.THEME_DARK' | translate }}</label>
