fix(profile): wait until profile loaded

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
 <div class="content-area">
-  <div class="user-profile">
+  <div *ngIf="profile" class="user-profile">
 
     <form>
       <h1>{{ 'USERPROFILEPAGE.USER_PROFILE' | translate }}</h1>
