--- a/src/app/test-management/test-management.component.css
+++ b/src/app/test-management/test-management.component.css
@@ -1,3 +1,12 @@
-.content-area {
-    height: calc(100vh - 80px);
+.wrapper {
+    height: calc(100vh - 60px);
+    display: flex;
+    justify-content: space-between;
+    width: (100vw -240px);
+}
+
+.sidenav {
+  height: calc(100vh -60px);
+  border: 0px !important;
+  order: 999 !important;
 }
