fix(ui): fix on click closing test suite tree on mobile screen

--- a/src/app/test-management/test-management.component.html
+++ b/src/app/test-management/test-management.component.html
@@ -70,7 +70,7 @@
       <!--</button>-->
       <ng-template [(clrIfExpanded)]="testSuite.expanded">
         <clr-tree-node *ngFor="let subTestSuite of testSuite.children">
-          <button (click)="openTestSuite(subTestSuite._id, subTestSuite.name)" class="clr-treenode-link" [class.active]="subTestSuite._id === selectedTestSuite">
+          <button clrVerticalNavLink (click)="openTestSuite(subTestSuite._id, subTestSuite.name)" class="clr-treenode-link" [class.active]="subTestSuite._id === selectedTestSuite">
             <clr-icon [attr.shape]="subTestSuite.icon"></clr-icon>
             {{subTestSuite.name}}
           </button>
