--- a/src/app/test-management/test-management.component.html
+++ b/src/app/test-management/test-management.component.html
@@ -1,37 +1,37 @@
 <div class="wrapper">
 
 
-    <div class="col-sm-12 col-md-12 col-lg-9">
+  <div class="col-sm-12 col-md-12 col-lg-9">
 
-      <h4>{{ selectedTestSuite }}</h4>
-      <clr-datagrid *ngIf="testCases" [(clrDgSelected)]="selectedTestCases" [clDgRowSelection]="true">
+    <h4>{{ selectedTestSuite }}</h4>
+    <clr-datagrid *ngIf="testCases" [(clrDgSelected)]="selectedTestCases" [clDgRowSelection]="true">
 
-        <clr-dg-action-bar>
-          <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-secondary" (click)="onAdd()" *ngIf="selectedTestSuite != ''">
-              <clr-icon shape="plus"></clr-icon> {{ 'TESTMANAGEMENTPAGE.ADD' | translate }}</button>
-            <button type="button" class="btn btn-sm btn-secondary" (click)="onDelete()" *ngIf="selectedTestCases.length > 0">
-              <clr-icon shape="close"></clr-icon> {{ 'TESTMANAGEMENTPAGE.DELETE' | translate }}</button>
-            <button type="button" class="btn btn-sm btn-secondary" (click)="onEdit()" *ngIf="selectedTestCases.length == 1">
-              <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}</button>
-          </div>
-        </clr-dg-action-bar>
+      <clr-dg-action-bar>
+        <div class="btn-group">
+          <button type="button" class="btn btn-sm btn-secondary" (click)="onAdd()" *ngIf="selectedTestSuite != ''">
+            <clr-icon shape="plus"></clr-icon> {{ 'TESTMANAGEMENTPAGE.ADD' | translate }}</button>
+          <button type="button" class="btn btn-sm btn-secondary" (click)="onDelete()" *ngIf="selectedTestCases.length > 0">
+            <clr-icon shape="close"></clr-icon> {{ 'TESTMANAGEMENTPAGE.DELETE' | translate }}</button>
+          <button type="button" class="btn btn-sm btn-secondary" (click)="onEdit()" *ngIf="selectedTestCases.length == 1">
+            <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}</button>
+        </div>
+      </clr-dg-action-bar>
 
-        <clr-dg-column>{{ 'TESTMANAGEMENTPAGE.TITLE' | translate }}</clr-dg-column>
-        <!--<clr-dg-column>Status</clr-dg-column>-->
+      <clr-dg-column>{{ 'TESTMANAGEMENTPAGE.TITLE' | translate }}</clr-dg-column>
+      <!--<clr-dg-column>Status</clr-dg-column>-->
 
-        <clr-dg-row *clrDgItems="let testCase of testCases" [clrDgItem]="testCase">
-          <!--
+      <clr-dg-row *clrDgItems="let testCase of testCases" [clrDgItem]="testCase">
+        <!--
         <clr-dg-cell style="display: flex;">
             <clr-checkbox></clr-checkbox>
           <span style="align-self: center;">{{user.name}}</span>
         </clr-dg-cell>
       -->
-          <clr-dg-cell>
-            {{testCase.title}}
-          </clr-dg-cell>
+        <clr-dg-cell>
+          {{testCase.title}}
+        </clr-dg-cell>
 
-          <!--
+        <!--
           <clr-dg-cell>
             <div class="select">
               <select id="selects_1">
@@ -44,23 +44,23 @@
             </div>
           </clr-dg-cell>
 -->
-        </clr-dg-row>
+      </clr-dg-row>
 
-        <clr-dg-footer>{{testCases.length}}</clr-dg-footer>
-      </clr-datagrid>
-
-
-
-    </div>
+      <clr-dg-footer>{{testCases.length}}</clr-dg-footer>
+    </clr-datagrid>
 
 
+
+  </div>
 
 
 
 
 
-<!-- TEST SUITES TREE COMPONENT -->
-<div *ngIf="testSuitesViewModel.length > 0" class="sidenav" [clr-nav-level]="2">
+
+
+  <!-- TEST SUITES TREE COMPONENT -->
+  <div *ngIf="testSuitesViewModel.length > 0" class="sidenav" [clr-nav-level]="2">
     <!-- TODO move to testsuites tree component -->
 
     <clr-tree-node *ngFor="let testSuite of testSuitesViewModel">
@@ -79,14 +79,43 @@
     </clr-tree-node>
   </div>
 
-  <clr-modal [(clrModalOpen)]="popUpOpened">
+  <clr-modal *ngIf="testcase" [(clrModalOpen)]="createOpened">
+    <h3 class="modal-title">Создать тест кейс</h3>
+    <div class="modal-body">
+      <form (ngSubmit)="createTestCase()" id="createTestCaseForm" #createTestCaseForm="ngForm">
+        <section class="form-block">
+          <label>Детали</label>
+
+          <div class="form-group">
+            <label class="required" for="title">Title</label>
+            <input type="text" id="title" name="title" [(ngModel)]="testcase.title" #title="ngModel" required placeholder="Test case example title"
+              size="35">
+          </div>
+
+          <div class="form-group">
+            <label for="description">Description</label>
+            <input type="text" id="description" name="description" [(ngModel)]="testcase.description" #description="ngModel"
+              placeholder="Test case check login functionality" size="35">
+          </div>
+
+          <button type="submit" class="btn btn-primary">Create</button>
+        </section>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline" (click)="createOpened = false">{{ 'TESTMANAGEMENTPAGE.CANCEL' | translate }}</button>
+      <button type="button" class="btn btn-primary" (click)="createOpened = false; createTestCaseForm.ngSubmit.emit();" [disabled]="!createTestCaseForm.form.valid">Create</button>
+    </div>
+  </clr-modal>
+
+  <clr-modal [(clrModalOpen)]="deleteOpened">
     <h3 class="modal-title">{{ 'TESTMANAGEMENTPAGE.MODAL_DELETE_HEADER' | translate }}</h3>
     <div class="modal-body">
       <p>{{ 'TESTMANAGEMENTPAGE.MODAL_DELETE_DESCRIPTION' | translate }}</p>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-outline" (click)="popUpOpened = false">{{ 'TESTMANAGEMENTPAGE.CANCEL' | translate }}</button>
-      <button type="button" class="btn btn-primary btn-danger" (click)="popUpOpened = false; forceDelete();">{{ 'TESTMANAGEMENTPAGE.DELETE' | translate }}</button>
+      <button type="button" class="btn btn-outline" (click)="deleteOpened = false">{{ 'TESTMANAGEMENTPAGE.CANCEL' | translate }}</button>
+      <button type="button" class="btn btn-primary btn-danger" (click)="deleteOpened = false; forceDelete();">{{ 'TESTMANAGEMENTPAGE.DELETE' | translate }}</button>
     </div>
   </clr-modal>
 </div>
