fix(ui): mobile support for settings page

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,6 +1,6 @@
 <div class="content-container">
 
-  <clr-vertical-nav class="sidenav nav-trigger--bottom" [clrVerticalNavCollapsible]="true" [(clrVerticalNavCollapsed)]="collapsed">
+  <clr-vertical-nav class="sidenav nav-trigger--bottom" [clr-nav-level]="1" [clrVerticalNavCollapsible]="true" [(clrVerticalNavCollapsed)]="collapsed">
     <div class="nav-content">
 
       <a clrVerticalNavLink routerLink="./main" routerLinkActive="active">
